	- [FIX] CONNECT-241 OSX: Routing rule for Direct All traffic through the VPN is not created
	- [FIX] CONNECT-253 "Undefined fields in profile" displayed erroneously
	- [IMPROVEMENT] CONNECT-219 Avoid file dump when Connection Profiles are unchanged
	- [IMPROVEMENT] CONNECT-248 Add Endian prefix to product name in shortcuts

libencloud 0.8.0 (26/06/2015)
	- vpn: headers are now public; improved internal representation; added helper functions and 
	  basic error checking
	- modeqcc now also supports plain vpn (based on config: setup.enabled)
	- CONFIG += splitdeps for case when package is not self-contained (e.g. Yocto)
	- sece: make sure valid=false is always caught as CodeServerLicenseInvalid
	- *ece: fix typo which caused congestion avoidance to be applied also to QCC
	- crypto: new requestFromAuth to set QNetworkRequest from libencloud::Auth
	- api: id and type are really optional and have proper defaults
	- config: autoretry and decongest can be modified via API (default false for QCC and true for *ECE);
	          vpn manager poll period can be modified via API (default is now 2000)
	- [CONNECT-201] Add OS to HTTP User-Agent

libencloud 0.7.6 (28/01/2015)
	- setup: fix possible crashes upon error due to double delete;
	  also valid=false triggers license error
	- vpn: allow timeout=0 (no timer)
	- etc: default verbosity=7 for ECE/SECE
	- ece: fix compilation error in http/handler1.ccp;
	  handle PoI from cert CN (no longer required as separate file)
	  failures due to licensing yield automatic retries (unlike sece)
	- sece: fix compilation error in core (header not included)
	- *ece: congestion avoidance via random wait before startup
	- defaults: LIBENCLOUD_DATA_PREFIX is /var/lib/encloud if !LIBENCLOUD_ENDIAN
	- client: avoid errors when certificate verification is off
	- build: when building from sratch remove only files ignored by git
	  (so local files such as .qmake.pri are kept)

libencloud 0.7.5 (01/12/2014):